# AlphaFactorForge

./: .gitignore  AGENTS.md  AlphaFactorForge.dc.html  CHANGELOG.md  CONVERSATION_HISTORY.md  HISTORY.md  README.md  STRATEGY_DISCOVERY.md  STRATEGY_GUIDE.md  manifest.webmanifest  tasks.md
alpha-factor-forge/: .gitignore  PHASE_A_VERIFY.md  README.md  TODO.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
alpha-factor-forge/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
alpha-factor-forge/src-tauri/capabilities/: chart-window-sync.json  metrics-window-sync.json
alpha-factor-forge/src-tauri/icons/: README.txt  icon.icns
alpha-factor-forge/src-tauri/migrations/: 0001_init.sql  0002_validation_records.sql
alpha-factor-forge/src-tauri/src/: error.rs  identity.rs  lib.rs  main.rs
alpha-factor-forge/src-tauri/src/commands/: ai_commands.rs  db_commands.rs  discovery_commands.rs  file_commands.rs  mod.rs  secret_commands.rs  window_commands.rs
alpha-factor-forge/src-tauri/src/db/: mod.rs  repositories.rs
alpha-factor-forge/src-tauri/src/discovery_core/: backtest.rs  backtest_parity_tests.rs  benchmark_parity_tests.rs  benchmarks.rs  embargo.rs  gate.rs  gate_score_parity_tests.rs  indicator_parity_tests.rs  indicators.rs  metrics.rs  mod.rs  parity_support.rs  prng.rs  random_entry.rs  score.rs  signals.rs  signals_split_parity_tests.rs  split.rs  types.rs
docs/: agent-execution-protocol.md  backtest-execution-contract.md  benchmark-suite-contract.md  creative-feature-roadmap.md  durable-identity-contract.md  (+9 more)
(+130 files in other folders)
